--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <h1>
             HI
         </h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis asperiores eligendi a, labore alias amet voluptatibus, obcaecati, omnis quibusdam sapiente voluptatum velit quia odit nesciunt? Voluptate quis id soluta tempora.
+        </p>
     </div>
 </body>
 </html>
